Added new campground route

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -2,6 +2,7 @@
 
 
 <h1>Campgrounds</h1>
+<p><a href="/campgrounds/new">Add new campground</a></p>
 
 <% campgrounds.forEach(function(camp) { %>
   <p>
