--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,13 +1,23 @@
 <% include partials/header %>
+<div class="container">
+  <div class="row">
+    <h1 style="text-align:center">Create a new campground</h1>
+      <div style="width: 30%; margin: 25px auto">
+        <form action="/campgrounds" method="POST">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Campground name" name="name" />
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Image link" name="image" />
+          </div>
+          <div class="form-group">
+            <button class="btn btn-lg btn-primary btn-block">Submit</button>
+          </div>
+        </form>
+        <p><a href="/campgrounds">Go back</a></p>
+      </div>
+    
 
-<h1>Create a new campground</h1>
-
-<form action="/campgrounds" method="POST">
-  <input type="text" placeholder="Campground name" name="name" />
-  <input type="text" placeholder="Image link" name="image" />
-  <button>Submit</button>
-</form>
-
-<p><a href="/campgrounds">Go back</a></p>
-
+  </div>
+</div>
 <% include partials/footer %>
