--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,9 @@
         <div class="caption">
           <h4><%= camp.name %></h4>
         </div>
+        <p>
+          <a href="/campgrounds/<%= camp._id %>"><button class="btn btn-primary">More info</button></a>
+        </p>
       </div>
     <% }) %>
   </div>
