--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,7 +1,7 @@
-<% include partials/header %>
+<% include ./partials/header %>
 
 <h1>Landing page</h1>
 <p>Welcome</p>
 <p><a href="/campgrounds">View all campgrounds</a></p>
 
-<% include partials/footer %>
+<% include ./partials/footer %>
